--- a/css/styles.css
+++ b/css/styles.css
@@ -556,7 +556,7 @@ placeholder {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  max-width: 408px;
+  width: 408px;
   min-height: 584px;
   overflow-y: auto;
 }
@@ -566,7 +566,7 @@ placeholder {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   padding: 72px 24px 24px 24px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-icon {
   display: flex;
@@ -704,6 +704,7 @@ placeholder {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 8px;
   display: inline-flex;
@@ -711,7 +712,7 @@ placeholder {
   justify-content: center;
   fill: transparent;
 }
-.form-checkbox .checkbox-action:checked {
+.checkbox-action:checked + .form-checkbox {
   background-color: #404bbf;
   fill: #f4f4fd;
   border: none;
@@ -731,7 +732,7 @@ placeholder {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-input-contacts:focus .modal-input-icon {
+.form-input-contacts:focus + .modal-input-icon {
   fill: #4d5ae5;
 }
 .modal-block-wrap {
